[package]
name = "pcdownload"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = "1"
serde_json = "1"
stac = "0.0.4"
tokio = { version = "1", features = ["full"] }
url = "2.3"
